[package]
name = "rtklib-ffi"
description = "Rust wrapper for RTKLIB"
version = "0.2.0"
edition = "2021"
authors = ["Kevin Webb", "Joseph Fox-Rabinovitz"]
repository = "https://github.com/kpwebb/rtklib-ffi"
license = "MIT"
keywords = ["rtk", "rtklib", "gnss", "ppk"]
homepage = "https://github.com/kpwebb/rtklib-ffi"
readme = "README.md"
exclude = [
    ".gitignore",
    "test/**/*",
]

[workspace]
members = ["rtklib-sys"]

[features]
conv = ["rtklib-sys/conv"]
gis = ["rtklib-sys/gis"]
hifitime = ["dep:hifitime"]
net = ["rtklib-sys/net"]
ppk = ["rtklib-sys/ppk"]
raw = ["rtklib-sys/raw"]
rtcm = ["rtklib-sys/rtcm"]
strum = ["dep:strum"]
tle = ["rtklib-sys/tle"]

[dependencies]
bitflags = "2"
hifitime = { version = "4", optional = true }
num_enum = "0.7.3"
rtklib-sys = { path = "rtklib-sys/", version = "0.2.0" }
strum = { version = "0.27", features = ["derive"], optional = true }
thiserror = "2"

[dev-dependencies]
serial_test = "3"
