[package]
name = "rtklib-ffi"
description = "Rust wrapper for RTKLIB"
version = "0.3.0"
edition = "2021"
authors = ["Kevin Webb", "Joseph Fox-Rabinovitz"]
repository = "https://github.com/kpwebb/rtklib-ffi"
license = "MIT"
keywords = ["rtk", "rtklib", "gnss", "ppk"]
homepage = "https://github.com/kpwebb/rtklib-ffi"
readme = "README.md"
exclude = [
    ".gitignore",
    "test/**/*",
]

[workspace]
members = ["rtklib-sys"]

[features]
binex = ["receiver", "rtklib-sys/binex"]
comnav = ["receiver", "rtklib-sys/comnav"]
conv = ["rtklib-sys/conv"]
crescent = ["receiver", "rtklib-sys/crescent"]
gis = ["rtklib-sys/gis"]
hifitime = ["dep:hifitime"]
javad = ["receiver", "rtklib-sys/javad"]
net = ["rtklib-sys/net"]
novatel = ["receiver", "rtklib-sys/novatel"]
nvs = ["receiver", "rtklib-sys/nvs"]
ppk = ["rtklib-sys/ppk"]
receiver = ["rtklib-sys/receiver"]
rt17 = ["receiver", "rtklib-sys/rt17"]
rtcm = ["rtklib-sys/rtcm"]
septentrio = ["receiver", "rtklib-sys/septentrio"]
skytraq = ["receiver", "rtklib-sys/skytraq"]
strum = ["dep:strum"]
swiftnav = ["receiver", "rtklib-sys/swiftnav"]
tersus = ["receiver", "rtklib-sys/tersus"]
tle = ["rtklib-sys/tle"]
ublox = ["receiver", "rtklib-sys/ublox"]
unicore = ["receiver", "rtklib-sys/unicore"]

[dependencies]
bitflags = "2"
hifitime = { version = "4", optional = true }
num_enum = "0.7.3"
rtklib-sys = { path = "rtklib-sys/", version = "0.2.0" }
strum = { version = "0.27", features = ["derive"], optional = true }
thiserror = "2"

[dev-dependencies]
serial_test = "3"
