[package]
name = "rtklib-sys"
version = "0.2.0"
rust-version = "1.82.0"
edition = "2018"
authors = ["Kevin Webb", "Joseph Fox-Rabinovitz"]
license = "MIT"
description = "Native bindings to RTKLIB"
readme = "README.md"
repository = "https://github.com/kpwebb/rtklib-ffi"
keywords = [ "bindings", "ffi", "rocksdb" ]
categories = [ "api-bindings", "rtklib", "external-ffi-bindings" ]
links = "rtklib-ffi"

[features]
binex = ["receiver"]
comnav = ["receiver"]
conv = []
crescent = ["receiver"]
gis = []
javad = ["receiver"]
net = []
novatel = ["receiver"]
nvs = ["receiver"]
ppk = []
receiver = []
rt17 = ["receiver"]
rtcm = []
septentrio = ["receiver"]
skytraq = ["receiver"]
swiftnav = ["receiver"]
tersus = ["receiver"]
tle = []
ublox = ["receiver"]
unicore = ["receiver"]

[build-dependencies]
bindgen = "0.70.1"
cc = "1.1.21"
